# dioxus-test

./: .gitignore  Cargo.toml  README.md  index.html  style.css
src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
